Repair error to liverload app, playing with de navbar and boxes with z-index

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,8 +15,14 @@
 }
 .content{
     color: #566a8c !important;
-    background-color: #c2cada1c;
+    background-color: #5a67801c;
 }
 .full_width{
     width: 100%;
+}
+.button{
+    background: #566a8c !important;
+    border-radius: 10px;
+    color:#fff;
+    padding: 3px 8px;
 }
