--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,10 +34,11 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #566a8c,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
+  yellow: yellow,
   dark:       #222
 );
 
